aluminum = shared_library('aluminum',
           'fofrhoDblexp.f',
           'dfrhoDblexp.f',
           'potinit.f',
           'forces.f',
           'Aluminum.cpp',
           'gagafeDblexp.f',
           'embedenergy.f',
           'sumembforce.f',
           dependencies : _deps,
           cpp_args : _args,
           install : true)
