cuh2 = shared_library('cuh2',
           'CuH2.cpp',
           'eam_isoc.f90',
           'eamroutines.f90',
           dependencies : _deps,
           link_with: _linkto,
           include_directories: _incdirs,
           cpp_args : _args,
           fortran_args : _fargs + ['-fno-implicit-none'],
           install : true)
